# custom-vector-db

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: benchmark.py
examples/: basic_usage.py  metadata_filtering.py  persistence.py  sample_records.jsonl
mini_vector_db/: __init__.py  cli.py  db.py  exceptions.py  filters.py  index.py  metrics.py  storage.py
tests/: test_db.py  test_filters.py  test_metrics.py  test_persistence.py
