[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "custom-vector-db"
version = "0.1.0"
description = "A small educational vector database built from scratch in Python."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "custom-vector-db contributors" }]
license = { text = "MIT" }
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
custom-vector-db = "custom_vector_db.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
